调整视角不会闪

--- a/2.RunPhysicsOnWindows/ServerCooperationMode/ServerCooperationMode.vcxproj
+++ b/2.RunPhysicsOnWindows/ServerCooperationMode/ServerCooperationMode.vcxproj
@@ -90,7 +90,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>PhysX3DEBUG_x64.lib;PhysX3CommonDEBUG_x64.lib;PhysX3CookingDEBUG_x64.lib;PhysXProfileSDKDEBUG.lib;PhysX3ExtensionsDEBUG.lib;libprotobuf.lib;PhysX3CharacterKinematicDEBUG_x64.lib;PxToolkitDEBUG.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>PhysX3DEBUG_x64.lib;PhysX3CommonDEBUG_x64.lib;PhysX3CookingDEBUG_x64.lib;PhysXProfileSDKDEBUG.lib;PhysX3ExtensionsDEBUG.lib;PhysXVisualDebuggerSDKDEBUG.lib;libprotobuf.lib;PhysX3CharacterKinematicDEBUG_x64.lib;PxToolkitDEBUG.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
     <PostBuildEvent>
